<resources>
    <string name="app_name">datLichKhamBenh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="ph_ng_kh_m">Phòng Khám</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nam">Nam</string>
    <string name="n">Nữ</string>
    <string name="phone_number">Phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_profile">Create Profile</string>
    <string name="confirm" />
    <string name="medical_examination_date">Medical examination date</string>
    <string name="sick">Sick</string>
    <string name="confrim">Confrim</string>
</resources>