<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="" />

    <ImageView
        android:id="@+id/imgLLogo"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/txtLTitle"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/ph_ng_kh_m" />

    <EditText
        android:id="@+id/txtLEmail"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtLPass"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        tools:ignore="HardcodedText"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnLRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>