<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
        <ImageView
            android:id="@+id/imgRLogo"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:importantForAccessibility="no" />
        <TextView
            android:id="@+id/txtRTitle"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginTop="10dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/ph_ng_kh_m" />
        <EditText
            android:id="@+id/txtRFullName"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/txtRDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:importantForAutofill="no" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/rdbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Nam"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rdbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Nữ"/>
        </RadioGroup>

        <EditText
            android:id="@+id/txtRPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/txtREmail"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/txtRPassword"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            tools:ignore="HardcodedText" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnRRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register" />
        </LinearLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
    </LinearLayout>
</ScrollView>