<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterInformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
        <ImageView
            android:id="@+id/imgEILogo"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:src="@drawable/logo"
            android:importantForAccessibility="no" />
        <EditText
            android:id="@+id/txtEIFullName"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/txtEIDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:importantForAutofill="no" />
        <RadioGroup
            android:id="@+id/rgEIGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <RadioButton
                android:id="@+id/rdbEIMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Nam"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rdbEIFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Nữ"/>
        </RadioGroup>
        <EditText
            android:id="@+id/txtEIPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/txtEIEmail"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
        <Spinner
            android:id="@+id/spEIDoctor"
            android:layout_width="match_parent"
            android:layout_height="96dp" />
        <EditText
            android:id="@+id/txtEISick"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Bệnh"
            android:inputType="text"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/txtEIDate"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Ngày khám"
            android:inputType="date"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/txtEITotalAmount"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Tổng tiền"
            android:inputType="number"
            android:importantForAutofill="no" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEICancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnEIAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Add" />
        </LinearLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="" />
    </LinearLayout>
</ScrollView>